--- a/benchmarking/paper/draft2.Rnw
+++ b/benchmarking/paper/draft2.Rnw
@@ -97,8 +97,8 @@ In contrast, there has been a recent push within the scientific community to pro
  Onboard measurement            & X           &              &                                   & Optional                 \\
  Compliance voltage             & $\pm$ 13.7V & $\pm$ 15V    & $\pm$ 120V                        & $\pm$ 45V                \\
  Fastest pulse                  & 50us        & 10us         & 20us                              & 60us                     \\
- Cost (USD)                     & \$194       & \$200        & \$4131 (2 channels)               &                          \\
-                                &             &              & \$7462  (4 channels)              &                          \\
+ Cost (USD)                     & \$194       & \$200        & \$4131 (2 channels)               &  \$6211 (plus \$4438     \\
+                                &             &              & \$7462  (4 channels)              &  for necessary software) \\
                                 &             &              & \$10327 (8 channels)              &                          \\
  Open source                    & X           & X            &                                   &                          \\
  \hline
@@ -115,22 +115,29 @@ In contrast, there has been a recent push within the scientific community to pro
 
 
 \section*{Results}
+We developed Stimjim to be an precision stimulus generator and isolator in a single package. Stimjim is based on the Teensy 3.5 microcontroller, which utilizes a 32-bit Arm Cortex-M4 processor running at 120MHz. Each stimulating channel includes a current source based on an improved Howland current pump, and a voltage source (an op-amp), driven by a 16-bit digital-to-analog converter (DAC). The final output of each channel is selected by a 4-way switch, such that either channel can be configured as a current output, voltage output, grounded, or disconnected (high-Z). Toe ensure the output is connected to a load and not either an open or short circuit, each channel also has a analog-to-digital converter able to read either the output voltage or the output current (via a sense resistor in series with the current output).
 
+Our design was made in Kicad, an open-source PCB CAD package. Schematic, layout, bill of materials, and build instructions are included in the supplement and in a git repository (https://bitbucket.org/natecermak/stimjim).
 
 To benchmark Stimjim, we varied the pulse frequency (from \Sexpr{round(1e6/max(paramMat$period),2)} Hz to \Sexpr{round(1e6/min(paramMat$period),2)} kHz), duration (from \Sexpr{min(paramMat$dur0)} to \Sexpr{max(paramMat$dur0)} us), and amplitude. We simultaneously recorded from both output channels on a National Instruments PCI-6110 card (12-bit ADC, sampling each channel at 2MHz).
 
-<<benchmarkFigure, echo=FALSE,fig.height=8,fig.width=8,fig.cap="\\label{fig:benchmarking}">>=
+<<benchmarkFigure, echo=FALSE,fig.height=7,fig.width=8,fig.cap="\\label{fig:benchmarking}">>=
 
+ex1 = sapply(dataFiles[seq(15,1,length.out = 6)], function(f){
+  dat = matrix(readBin(f, what='integer', n=1e7, size=2, endian = 'big'),ncol=2,byrow=TRUE)
+  fp = min(which(dat[,1] > 100))
+  dat[fp + (-1e3:3e4),1]*vpau
+})
 
-par(mar=c(4,5,2,2), mfrow=c(4,3))
-#matplot(sapply(res[1:60], function(x) x$pulseMat[,1]), col=c(1,2), type='l', lty=1)
+par(mar=c(4,4,1,1), mfrow=c(3,4), mgp=c(2,0.7,0))
+matplot(1e3/fs*1:nrow(ex1), dendRites::offset(ex1,15), col=1, type='l', lty=1, bty='n', yaxt='n', ylab='', xlab='time (ms)'); 
 plot(paramMat[1:30,3], sapply(res[seq(1,60,by=2)], function(x) x$IPI.summary[3])*1e6, 
   log='xy', main='median IPI vs target', cex=0.75, xlab='Target IPI', ylab='Median measured IPI')
 points(paramMat[1:30,3], sapply(res[seq(2,60,by=2)], function(x) x$IPI.summary[3])*1e6,
   col='red', cex=0.75)
 abline(a=0,b=1)
 
-#matplot(dendRites::offset(sapply(res[61:120], function(x) x$pulseMat[,1])), col=c(1,2), type='l', lty=1)
+
 plot(paramMat[1:30,3], sapply(res[seq(1,60,by=2)], function(x) x$IPI.sd)*1e6, 
   log='x', main='IPI sd', cex=0.75, xlab='Target IPI', ylab='Measured IPI std. dev.')
 points(paramMat[1:30,3], sapply(res[seq(2,60,by=2)], function(x) x$IPI.sd)*1e6,
@@ -143,6 +150,13 @@ points(paramMat[1:30,3], sapply(res[seq(2,60,by=2)], function(x) diff(x$IPI.summ
 
 
 
+ex2 = sapply(dataFiles[seq(52,31,length.out=6)], function(f){
+  dat = matrix(readBin(f, what='integer', n=1e7, size=2, endian = 'big'),ncol=2,byrow=TRUE)
+  fp = min(which(dat[,1] > 100))
+  dat[fp + (-1e3:1e4),1]*vpau
+})
+
+matplot(1e3/fs*1:nrow(ex2), dendRites::offset(ex2,15), col=1, type='l', lty=1, bty='n', yaxt='n', ylab='', xlab='time (ms)'); 
 
 plot(paramMat[31:59,7], sapply(res[seq(61,118,by=2)], function(x) x$PW.summary[3])*1e6/2, 
   log='xy', main='median PW vs target', ylab='measured median PW', cex=0.75)
@@ -159,6 +173,14 @@ plot(paramMat[31:59,7], sapply(res[seq(61,118,by=2)], function(x) diff(x$PW.summ
   log='x', main='PW range', ylab='PW range', cex=0.75)
 points(paramMat[31:59,7], sapply(res[seq(62,118,by=2)], function(x) diff(x$PW.summary[c(1,6)]))*1e6/2,
   col='red', cex=0.75)
+
+ex3 = sapply(dataFiles[seq(81,61,length.out=6)], function(f){
+  dat = matrix(readBin(f, what='integer', n=1e7, size=2, endian = 'big'),ncol=2,byrow=TRUE)
+  fp = min(which(dat[,1] > 10))
+  dat[fp + (-300:700),1]*vpau
+})
+
+matplot(1e3/fs*1:nrow(ex3), dendRites::offset(ex3,15), col=1, type='l', lty=1, bty='n', yaxt='n', ylab='', xlab='time (ms)'); 
 
 
 plot(paramMat[61:90,5], sapply(res[seq(121,180,by=2)], function(x) x$sh.median*1e3), 
